# fastshell

./: Cargo.toml  LICENSE  README.md  README.zh.md  build.rs
benches/: latency.rs  throughput.rs
docs/: api.md  commands.md  ffi.md  integration.md  mobile.md  plugin.md  python.md  security.md
examples/: bench.rs  quick_test.rs
scripts/: setup.sh
src/: lib.rs
src/bridge/: executor.rs  fs.rs  io.rs  mod.rs
src/python/: cpython.rs  mod.rs
src/sdk/: ffi.rs  mod.rs  plugin.rs  types.rs
src/shell/: mod.rs
src/shell/commands/: awk.rs  base64.rs  cat.rs  cd.rs  chmod.rs  compress_cal.rs  cp.rs  curl.rs  cut.rs  date.rs  devices.rs  diff.rs  du_df_stat.rs  echo.rs  env_utils.rs  extra.rs  false_.rs  file_column_seq.rs  final_batch.rs  find.rs  fs_more.rs  git.rs  grep.rs  gunzip.rs  gzip.rs  hashsum.rs  head.rs  jq.rs  kill.rs  ls.rs  misc_utils.rs  mkdir.rs  mod.rs  mv.rs  paste_timeout.rs  ping.rs  ps.rs  pwd.rs  rm.rs  sed.rs  (+21 more)
src/vfs/: mod.rs
tests/: aacode_integration_test.rs  bridge_test.rs  compat_test.rs  e2e_test.rs  edge_case_test.rs  fuzz_test.rs  python_shell_bridge_test.rs  python_test.rs  sdk_test.rs  shell_test.rs  stress_test.rs  vfs_test.rs
tests/common/: mod.rs
