[package]
name = "fastshell"
version = "0.2.1"
edition = "2021"
description = "Lightweight Bash + Python runtime SDK for mobile AI agents"
license = "Apache-2.0"
authors = ["xiefujin <490021684@qq.com>"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
git = ["git2", "openssl"]

[dependencies]
filetime = "0.2"
libc = "0.2"
ureq = "2"
rustls = "0.23"
rustls-pki-types = "1"
flate2 = "1"
tar = "0.4"
git2 = { version = "0.18", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
libloading = "0.8"
russh = "0.46"
russh-keys = "0.46"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros"] }
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
uuid = { version = "1", features = ["v4"] }
regex = "1"
glob = "0.3"
sha1 = "0.10"
num_cpus = "1"
xz2 = "0.1"
sha3 = "0.10"
bzip2 = "0.4"
